--- a/uxml/SelectionTrackerWIndow.uxml
+++ b/uxml/SelectionTrackerWIndow.uxml
@@ -1,3 +1,8 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="True">
-    <ui:VisualElement style="flex-grow: 1; padding: 10px;"/>
+    <ui:VisualElement style="flex-grow: 1; padding: 10px;">
+        <ui:VisualElement name="utilContainer" style="flex-grow: 1; flex-direction: row; height: 50px; max-height: 30px; margin-top: 1px; margin-right: 1px; margin-bottom: 1px; margin-left: 1px; padding-top: 1px; padding-right: 1px; padding-bottom: 1px; padding-left: 1px; border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0); border-top-width: 1px; border-right-width: 1px; border-bottom-width: 1px; border-left-width: 1px; border-top-left-radius: 1px; border-top-right-radius: 1px; border-bottom-right-radius: 1px; border-bottom-left-radius: 1px; flex-shrink: 0;">
+            <ui:SliderInt name="historylength" label="History Length" value="50" high-value="100" low-value="5" show-input-field="true" style="width: 50%; max-width: 50%; align-self: center;" />
+            <ui:Button text="Clear History" name="clearhistory" style="min-width: 50%; max-width: 50%; flex-direction: row; background-color: rgba(255, 0, 0, 0.33); border-left-color: rgb(0, 0, 0); border-right-color: rgb(0, 0, 0); border-top-color: rgb(0, 0, 0); border-bottom-color: rgb(0, 0, 0);" />
+        </ui:VisualElement>
+    </ui:VisualElement>
 </ui:UXML>
